--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/cli": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
+    "@playwright/test": "^1.15.2",
     "@types/node": "^12.11.1",
     "ts-node": "^10.2.1",
     "typescript": "~4.2.3"
