--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.1",
@@ -35,6 +37,7 @@
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
     "@types/node": "^12.11.1",
+    "cypress": "^8.6.0",
     "ts-node": "^10.2.1",
     "typescript": "~4.2.3"
   }
